@@ -1,5 +1,10 @@
 2005-05-02  Sam Steingold  <sds@gnu.org>
 
+	* modules/berkeley-db/dbi.lisp, modules/syscalls/posix.lisp:
+	use EXPORTING to export structure slot accessors
+
+2005-05-02  Sam Steingold  <sds@gnu.org>
+
 	* exporting.lisp (define-condition): use MOP
 
 2005-04-30  Sam Steingold  <sds@gnu.org>
